--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,41 +1,35 @@
-name: CI/CD - build & push Docker image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
-      - name: Log in to DockerHub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo-app:latest
-
-      - name: Done
-        run: echo "Workflow finished"
+      - name: Build and push Docker image (with retry)
+        run: |
+          for i in 1 2 3; do
+            echo "Attempt #$i to build and push image"
+            docker buildx build \
+              --push \
+              --tag ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo-app:latest \
+              --provenance=false \
+              . && break || echo "Retrying in 30s..." && sleep 30
+          done
